--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 ###> phpunit/phpunit ###
 /phpunit.xml
 .phpunit.result.cache
+.phpunit.cache
 ###< phpunit/phpunit ###
 
 ###> symfony/phpunit-bridge ###
