--- a/composer.json
+++ b/composer.json
@@ -89,6 +89,7 @@
         }
     },
     "require-dev": {
+        "fakerphp/faker": "^1.21",
         "phpunit/phpunit": "^10.0",
         "symfony/browser-kit": "6.2.*",
         "symfony/css-selector": "6.2.*",
