add tailwind css

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,6 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    form_themes: ['forms/tailwind_search_form.html.twig']
 
 when@test:
     twig:
